--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/tests/*.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^6.0.5",
+    "@hapi/vision": "^6.1.0",
     "boom": "^7.3.0",
-    "hapi": "^17.7.0",
-    "hapi-swagger": "^9.1.3",
-    "inert": "^5.1.2",
-    "joi": "^14.1.0",
+    "hapi-swagger": "^14.5.5",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.6",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1",
-    "vision": "^5.4.3"
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
     "mocha": "^10.0.0"
